--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -4,6 +4,7 @@
 * [*] Fix notice overlapping the ActionSheet that displays the Site Icon controls. [#16579]
 * [*] Fix login error for WordPress.org sites to show inline. [#16614]
 * [*] Disables the ability to open the editor for Post Pages [#16369]
+* [*] Fixed an issue that could cause a crash when moderating Comments. [#16645]
 
 17.5
 -----
