--- a/WordPress/Resources/release_notes.txt
+++ b/WordPress/Resources/release_notes.txt
@@ -1,11 +1,17 @@
-* [**] Reader Post details: now shows a summary of Likes for the post. Tapping it displays the full list of Likes. [#16628]
-* [*] Fix notice overlapping the ActionSheet that displays the Site Icon controls. [#16579]
-* [*] Fix login error for WordPress.org sites to show inline. [#16614]
-* [*] Disables the ability to open the editor for Post Pages [#16369]
-* [*] Fixed an issue that could cause a crash when moderating Comments. [#16645]
-* [*] Fix notice overlapping the ActionSheet that displays the QuickStart Removal. [#16609]
-* [*] Site Pages: when setting a parent, placeholder text is now displayed for pages with blank titles. [#16661]
-* [***] Block Editor: Audio block now available on WP.com sites on the free plan. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3523]
-* [**] You can now create a Site Icon for your site using an emoji. [#16670] 
-* [*] Fix notice overlapping the ActionSheet that displays the More Actions in the Editor. [#16658]
+With 17.6, you can add the Audio Block to any WordPress.com site, whatever plan you’re on – including the Free Plan. The Audio Block makes it easy to add podcasts, music, and sound files to your posts and pages.
 
+In the Reader, you’ll now see a count and summary of Likes added to every post. If that’s not enough Likes in your life, tap the summary and you’ll be able to see the full list.
+
+We’ve been hard at work wrangling UX improvements, too:
+
+When you assign a parent page to a page without a title, you’ll now see a ‘(no title)’ placeholder instead of a blank line, giving you a gentle nudge to name the page.
+
+You’ve never been able to edit Post Archive pages because they’re automatically generated. In 17.6, you won’t be able to open them in the editor, either, saving you a wasted trip.
+
+We’ve also been working on fixing things:
+
+We took care of some notices that had been overlapping the ActionSheet, including one that displays Site Icon controls, another displaying the QuickStart Removal, and a third that displays More Actions in the editor.
+
+Last up, we squashed a bug that sometimes caused the app to crash during comment moderation and another to fix a login error for WordPress.org sites to show inline.
+
+That’s all for 17.6. See you in 17.7!
