--- a/fastlane/jetpack_metadata/es-ES/release_notes.txt
+++ b/fastlane/jetpack_metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-El Editor de bloques tiene una nueva cuadrícula de diseño de bloques y, además, mientras trabajábamos en el código del editor, también ajustamos el código para los usuarios de tabletas. Ahora se ha solucionado el problema relacionado con la vista de la tableta para el botón de inserción en el Editor de bloques.
+El Editor de bloques tiene una nueva cuadrícula de diseño de bloques y, además, mientras trabajábamos en el código del editor, también lo ajustamos para los usuarios de tabletas. Ahora se ha solucionado el problema con la vista de tableta para el botón de inserción en el Editor de bloques.
