--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+18.0
+-----
+* [*] Updated the header text sizes to better support large texts on Choose a Domain and Choose a Design flows. [#16923]
+
 17.9
 -----
 * [internal] Redirect Terms and service to open the page in an external web view [#16907]
