--- a/WordPress/Resources/AppStoreStrings.po
+++ b/WordPress/Resources/AppStoreStrings.po
@@ -15,7 +15,8 @@ msgstr ""
 
 #. translators: Subtitle to be displayed below the application name in the Apple App Store. Limit to 30 characters including spaces and commas!
 msgctxt "app_store_subtitle"
-msgid "Build a website or blog"
+msgid "Build a website or blog
+"
 msgstr ""
 
 #. translators: Multi-paragraph text used to display in the Apple App Store.
@@ -40,15 +41,13 @@ msgctxt "app_store_keywords"
 msgid "social,notes,jetpack,writing,geotagging,media,blog,website,blogging,journal"
 msgstr ""
 
-msgctxt "v17.8-whats-new"
+msgctxt "v17.9-whats-new"
 msgid ""
-"Text blocks get some love. Color and background customization is added to the block editor’s text blocks.\n"
+"There’s a new block in town! With the Embed block, you can embed content from your favorite services like YouTube, TikTok, Instagram, and more. Stay tuned for additional functionality to come.\n"
 "\n"
-"Other block editor updates include fixing an issue with the block selector on iPad and update loading and failed screens for the editor’s web version.\n"
+"Love our Blogging Reminders feature? Previously, only site admins could configure reminders, but we’ve now enabled this feature for people who are able to edit posts on your site (editors, authors, and contributors).\n"
 "\n"
-"If you’ve experienced some refresh issues with the follow buttons in the Reader, you can rest easy now, as those issues have been solved.\n"
-"\n"
-"Authors and Contributors are no longer in the dark! They can now view a site’s Comments via My Site > Comments.\n"
+"We’ve made improvements to comment moderation, ensuring that the appropriate users can swipe left to approve/unapprove and trash comments. We’ve also provided support for Global Styles, enabling settings like color and background customization for Full Site Editing themes.\n"
 msgstr ""
 
 #. translators: This is a standard chunk of text used to tell a user what's new with a release when nothing major has changed.
