--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-28 11:54:08+0000 */
+/* Translation-Revision-Date: 2021-09-30 09:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: id */
@@ -1846,7 +1846,7 @@ translators: Block name. %s: The localized block name */
 "Couldn't mark as spam" = "Tidak dapat menandai sebagai spam";
 
 /* Indicating that referrer couldn't be unmarked as spam */
-"Couldn't unmark as spam" = "Tidak dapat menghilangkan tanda sebagai spam";
+"Couldn't unmark as spam" = "Tidak dapat menghilangkan tanda  spam";
 
 /* The title for an alert that says to the user that the featured image he selected couldn't be uploaded. */
 "Couldn't upload the featured image" = "Tidak dapat mengunggah gambar andalan";
@@ -5835,13 +5835,13 @@ translators: Block name. %s: The localized block name */
 "Save" = "Simpan";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft page. */
-"Save %ld photos as a draft page on:" = "Simpan %ld foto sebagai konsep halaman pada:";
+"Save %ld photos as a draft page on:" = "Simpan %ld foto sebagai halaman konsep pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving multiple photos in a draft post. */
 "Save %ld photos as a draft post on:" = "Simpan %ld foto sebagai pos konsep pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft page. */
-"Save 1 photo as a draft page on:" = "Simpan 1 foto sebagai konsep halaman pada:";
+"Save 1 photo as a draft page on:" = "Simpan 1 foto sebagai halaman konsep pada:";
 
 /* Text displayed in the share extension's summary view that describes the action of saving a single photo in a draft post. */
 "Save 1 photo as a draft post on:" = "Simpan 1 foto sebagai konsep pos pada:";
@@ -5857,7 +5857,7 @@ translators: Block name. %s: The localized block name */
 "Save as Draft" = "Simpan sebagai Konsep";
 
 /* Text displayed in the share extension's summary view that describes the save draft page action. */
-"Save draft page on:" = "Simpan konsep halaman pada:";
+"Save draft page on:" = "Simpan halaman konsep pada:";
 
 /* Text displayed in the share extension's summary view that describes the save draft post action. */
 "Save draft post on:" = "Simpan konsep pos pada:";
