--- a/WordPress/Resources/AppStoreStrings.po
+++ b/WordPress/Resources/AppStoreStrings.po
@@ -15,7 +15,8 @@ msgstr ""
 
 #. translators: Subtitle to be displayed below the application name in the Apple App Store. Limit to 30 characters including spaces and commas!
 msgctxt "app_store_subtitle"
-msgid "Build a website or blog"
+msgid "Build a website or blog
+"
 msgstr ""
 
 #. translators: Multi-paragraph text used to display in the Apple App Store.
@@ -44,11 +45,11 @@ msgctxt "v18.4-whats-new"
 msgid ""
 "We have made life easier in the Block editor! There are dedicated embed blocks for YouTube, Twitter, WordPress, and Vimeo, which makes adding media super speedy — you can find them in the block picker view. The URLs can even be edited after you have selected them.\n"
 "\n"
-"We have also tweaked the gallery block, so your images will still be added if you close the post while they are uploading.\n"
+"We fixed an issue with the gallery block, so now your images will still be added if you close the post while they are uploading.\n"
 "\n"
-"Another fixed issue is the notification screen occasionally showing the wrong avatar when you are mentioned in a comment — your chosen image will now be proudly displayed!\n"
+"But, if you are still having problems, asking for help is even easier. You can do it right inside the editor screen: Just tap the 3-dot menu button, select “Help & Support”, then “Contact Support.”\n"
 "\n"
-"But, if you are still having problems asking for help is even easier. You can do it right inside the editor screen: Just tap the 3-dot menu button, select “Help & Support”, then “Contact Support.”\n"
+"Lastly, we fixed an issue where the notification screen was occasionally showing the wrong avatar when you are mentioned in a comment — your chosen image will now be proudly displayed!\n"
 msgstr ""
 
 #. translators: This is a standard chunk of text used to tell a user what's new with a release when nothing major has changed.
